--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+}
+
+  
   "name": "gemini-movie-showcase",
   "private": true,
   "version": "0.0.0",
